--- a/Assignment2.Rmd
+++ b/Assignment2.Rmd
@@ -93,31 +93,43 @@ document.addEventListener("DOMContentLoaded", function() {
 
 # Executive Summary
 
-In this statistical report, we investigate the techniques used by the forensic services at Police Scotland on blood alcohol computations in criminal cases associated with drink driving. In UK law, it is an offence to drive with blood alcohol concentration (BAC) above the prescribed limit. Since alcohol levels fall over time, the measured BAC at the police station is lower than at the time of driving; forensic scientists ‘back-calculate’ the earlier level using an elimination rate [@FSR2020].
+In this report we investigate the statistical techniques used by the forensic services at Police Scotland on blood alcohol computations in criminal cases associated with drink driving. In UK law, it is an offence to drive with blood alcohol concentration (BAC) above the prescribed limit (0.47g/kg). Since alcohol levels fall over time, the measured BAC at the police station is lower than at the time of driving; forensic scientists ‘back-calculate’ the earlier level using an elimination rate [@FSR2020].
 
-The first method implemented by Police Scotland is the so-called $\beta$ elimination rate, which measures how quickly alcohol is eliminated from the bloodstream. Using available data, a distribution for $\beta$ can be constructed, and the 2.5th and 97.5th percentiles of this distribution are used as the limits for this range. Currently, if an individual has a blood alcohol concentration above the legal limit, calculated using the lower 2.5th percentile of the $\beta$ distribution, the forensic team concludes that they are above the limit. We assessed whether this approach fairly represents uncertainty and whether a clearer reporting standard could improve transparency.
+The current method implemented by Police Scotland incorporates the $\beta$ elimination rate, a measure of how quickly alcohol is eliminated from the bloodstream. A fixed range for $\beta$ is applied across all individuals, using the 2.5th percentile of the distribution as a conservative cutoff. If the back‑calculated BAC exceeds the legal limit under this assumption, the individual is reported as over the limit. While simple, this binary approach does not reflect the variability of $\beta$ across individuals or the uncertainty inherent in the calculation.
 
-Using the provided dataset, we examined how $\beta$ varies based on individual characteristics (weight, height, age, sex) and compared several modelling strategies: using empirical percentiles, parametric fitting, sex-specific shifts, linear models, and quantile regression for the 2.5% of $\beta$.
+Using the provided dataset of 100 individuals [@thesis], we examined how $\beta$ varies based on individual characteristics (weight, height, age, sex). We found that there us significant negative correlations between $\beta$and both weight and height, a clear sex-specific difference, with males typically showing high elimination rates. Further, we found age has little influence on $\beta$.
 
-In practice, we found that $\beta$ shows significant variation across individuals, suggesting treating $\beta$ as a single fixed range for everyone ignores these variabilities. Further, estimates are better represented with uncertainty rather than using a single cutoff, as is currently implemented. These findings support the idea that estimates should be coupled with uncertainty, and that a probability of exceeding the legal limit, rather than a binary verdict seems a more fitting approach.
+We then applied these findings by comparing several modelling strategies:
+
+-   **Parametric Distributions**: Gamma provided the most accurate fit to the observed $\beta$ values, outperforming normal and beta alternatives.
+
+-   **Linear models**: Useful for incorporating continuous predictors, though residual diagnostics suggested violations of assumptions.
+
+-   **Quantile Regression**: A more appropriate approach when estimating the lower tail of $\beta$, avoiding restrictive assumptions and allowing covariate-specific inference.
+
+In our investigation, we propose replacing the current binary cutoff with a probabilistic and interval-based framework:
+
+-   **Probabilistic Estimation**: Compute the probability that the BAC at the time of driving exceeded the legal limit, using Monte Carlo simulation or analytical integration of the fitted distribution.
+
+-   **Interval Presentation**: A 95% credible interval for the back-calculated BAC is then provided, alongside the probability of exceeding the limit.
+
+As a case study example, we found that under the current approach, an individual would be deemed not over the limit, while our suggested approaches provide respective probabilities of 76% and 75% that the individual was indeed over the limit - revealing a substantial likelihood that the individual was above the legal threshold, in contrast to the binary conclusion under current practice.
 
 We also considered situations where no blood sample is available and Widmark’s equation must be used along with eyewitness dose, which introduces the volume of distribution $V_d$. The standard approach treats $\beta$ and $V_d$ as independent and applies fixed percentile ranges for both.
 
-We found that $V_d$ and $\beta$ are negatively correlated in the data. The common practice of combining extreme marginal percentiles for $\beta$ and $V_d$ while assuming independence can therefore produce implausible joint scenarios.
+We found $V_d$ and $\beta$ to be negatively correlated, meaning treating them as independent and combining extreme marginal percentiles can lead to implausible scenarios. Hence, we suggest reports should acknowledge this relationship and avoid the assumption of independence.
 
-Based on our findings, we encourage expert reports used in jurisdiction cases to include:
+In conclusion, our findings support a shift towards a probabilistic reporting framework in forensic alcohol analysis. We recommend expert witness reports should include:
 
--   the measured BAC
+-   Measured BAC and elapsed time since driving.
 
--   the elapsed time since driving
+-   The back-calculated BAC at the time of driving with a 95% uncertainty interval.
 
--   the estimated BAC at time of driving ($C_0$)
+-   The probability of exceeding the legal limit.
 
--   a 95% uncertainty interval for $C_0$ derived from the fitted $\beta$ distribution
+-   Clear disclosure of assumptions about $\beta$ and $V_d$ when applicable, including their correlation.
 
--   the probability that $C_0$ exceeded the legal limit.
-
-Further, we recommend that when Widmark's equation is used, reports should specify the assumed distributions for $\beta$ and $V_d$, along with acknowledgement of their relationship.
+This approach ultimately enhances transparency, communicates uncertainty, and provides courts with a mode scientifically defensible basis for decision making.
 
 \newpage
 
@@ -783,13 +795,25 @@ The current forensic approach uses a single threshold for the elimination rate, 
 
 $$
 C_0 = C_t + \beta t
-$$ to obtain a point estimate of the blood alcohol concentration at the time of driving. A binary decision is then made as to whether this estimated $C_0$ exceeds the legal limit. While this approach is simple, it disregards uncertainty in $\beta$ and in the model used to derive it. Consequently, it may give a misleading impression of precision in borderline cases.
+$$to obtain a point estimate of the blood alcohol concentration at the time of driving. A binary decision is then made as to whether this estimated $C_0$ exceeds the legal limit.
+
+To illustrate this, let us consider the following case study.
+
+A 70 year old female (weight: 70kg, height: 160cm) is arrested after being stopped by the police while driving. She provides a blood sample to the police 2 hours after her arrest which gives a reading of Ct = 0.15g/kg (i.e. grams of alcohol per kilogram of blood). The legal limit is x = 0.47g/kg. The police wish to charge her with the criminal offence of driving while over the legal limit.
+
+The current approach would take the 2.5th percentile of $\beta$ across the population, in our case we have $\beta$ = 0.126476. That would mean, in the current "back-calculation" approach, the forensics team would deduce their BAC at the time of driving to be
+
+$$
+C_0 = C_t + \beta t = 0.15 + 0.126476 \times2 = 0.402952<0.47.
+$$
+
+Due to the binary nature of this approach, since this back calculated value is below the legal limit, the conclusion is that the individual should not be prosecuted. While this approach is simple, it disregards uncertainty in $\beta$ and in the model used to derive it. Given we have highlighted the clear variation of $\beta$ between individuals, there is reason to query the valdity of this approach in borderline cases.
 
 To provide a more transparent and scientifically defensible analysis, we propose that Police Scotland adopt a probabilistic reporting framework, which explicitly quantifies the uncertainty in $\beta$ and its effect on the estimated blood alcohol concentration $C_0$.
 
 ### Probabilistic (Simulation-Based) Estimation
 
-Given that we have found $\beta$ to follow a Gamma distribution,
+Given that we have found evidence that $\beta$ may follow a Gamma distribution, that is,
 
 $$
 \beta \sim Gamma(\hat{\alpha}, \hat{\lambda})
@@ -814,7 +838,11 @@ $$
 
 where $F_{Gamma}$ is the cumulative distribution function of the Gamma distribution.
 
-This probability offers a more nuances summary than a simple 'above/below limit' approach. For example, if $\mathbb{P}(C_0 > x)$=0.78, the expert witness could state that there is a 78% probability that the suspect's blood alcohol concentration exceeded the legal limit at the time of driving.
+Our other alternative, using quantile regression can too allow us to give a probabilistic approach to these cases. In this case...
+
+SAIOA PLS WRITE IN HERE HOW THE PROBABILITY IS CALCULATED FROM QUANTILE REGRESSION.
+
+This probability offers a more nuances summary than a simple 'above/below limit' approach. For example, if $\mathbb{P}(C_0 > x)$=0.88, the expert witness could state that there is an 88% probability that the suspect's blood alcohol concentration exceeded the legal limit at the time of driving.
 
 ### Interval Based Presentation
 
@@ -824,7 +852,9 @@ $$
 C_0 \in [C_t + q_{0.025}(\beta) t, C_t + q_{0.975}(\beta) t]
 $$
 
-This provides a range of plausible values for $C_0$ given the uncertainty in $\beta$. For example, using $C_t$ = 0.15 g/kg and $t$=2 hours, a 95% prediction/credible interval for the blood alcohol concentration at the time of driving, $C_0$, would be (0.4, 0.66) g/kg.
+This provides a range of plausible values for $C_0$ given the uncertainty in $\beta$.
+
+For the 70-year-old female described above, the fitted Gamma model for the elimination rate provides the following statistics.
 
 ```{r, echo = FALSE, message = FALSE}
 # Given parameters
@@ -884,14 +914,20 @@ results <- data.frame(
 
 kable(
   results,
-  caption = "Table 2: Summary of Back-Calculated Blood-Alcohol Concentration (C₀)",
+  caption = "Table 2: Summary of Back-Calculated Blood-Alcohol Concentration (C₀) Using Gamma Approach",
   col.names = c("Statistic", "Value"),
   align = c("l", "c"),
   format = "markdown"
 )
 ```
 
-Quantile regression produces a 2.5% and 97.5% quantile for each possible combination of explanatory variables, so we have to interpret a confidence interval of possible elimination rates differently here. To give an indication of the range of beta under quantile regression, we can look at the mean at each quantile.
+We can see from table 2 that the 95% prediction/credible interval for this individual's BAC at the time of driving is $C_0 \in$ (0.40,0.66)g/kg, with an associated probability of being over the limit of approximately 76%.
+
+Comparatively, quantile regression produces a 2.5% and 97.5% quantile for each possible combination of explanatory variables, so we have to interpret a confidence interval of possible elimination rates differently here. To give an indication of the range of beta under quantile regression, we can look at the mean at each quantile. That is,
+
+SAIOA PLS GIVE A MATHEMATICAL EXPLANATION OF THIS HERE THANK YOU XXXX
+
+The statistics associated with this approach, given the female in the case study, are given below.
 
 ```{r, echo = FALSE, message = FALSE}
 # Given parameters
@@ -913,7 +949,7 @@ C0_interval <- c(C0_lower, C0_upper)
 
 # Monte Carlo-style resampling from the quantile predictions
 set.seed(123)
-n_sim <- 10000
+n_sim <- 1000
 # approximate sampling of beta between 2.5% and 97.5% quantiles
 beta_samples <- runif(n_sim, min = mean(beta_q025), max = mean(beta_q975))
 C0_samples <- Ct + beta_samples * t
@@ -954,9 +990,9 @@ kable(
 )
 ```
 
-For the 70-year-old female, given $C_t$ = 0.15 g/kg measured 2 hours after arrest and the fitted Gamma model for the elimination rate, the estimated 95% prediction/credible interval for the blood alcohol concentration at the time of driving is $C_0 \in$ (0.40,0.66)g/kg. The probability that the true $C_0$ exceeded the legal limit of 0.47 g/kg is approximately 76%.
+From table 3, we see that the credible interval provided by the quantile regression approach for the individual's BAC at the time of driving is $C_0 \in$ (0.415,0.635)g/kg, with an associated probability of approaximately 75% that the individual was over the legal limit at time of driving.
 
-Under the current forensic convention (using $\beta$= 0.126), the individual would be reported as below the limit. However, our uncertainty-based model reveals a substantial probability that her true level was above the limit, suggesting that a probabilistic or interval-based report would convey the evidence more transparently.
+Under the current forensic convention, the individual would be reported as below the limit. However, our uncertainty-based model reveals a substantial probability that her true level was above the limit, suggesting that a probabilistic or interval-based report would convey the evidence more transparently.
 
 ### Graphical Uncertainty Presentation
 
@@ -1055,63 +1091,13 @@ legend("topleft",
 
 ## Applying Various Approaches
 
-To compare the performance of our different approaches outlined above we consider the following case study.
+The following figure compares the approaches we have discussed above, that is
 
-A 70 year old female (weight: 70kg, height: 160cm) is arrested after being stopped by the police while driving. She provides a blood sample to the police 2 hours after her arrest which gives a reading of Ct = 0.15g/kg (i.e. grams of alcohol per kilogram of blood). The legal limit is x = 0.47g/kg. The police wish to charge her with the criminal offence of driving while over the legal limit.
+-   the current empirical (population) based approach, with a binary decision;
 
-We can find the $2.5%$ quantile of the different beta distributions. Why?
+-   our suggested Gamma distribution approach, with a probabilistic decision approach, and corresponding confidence interval;
 
-```{r task_2, echo = FALSE, message = FALSE, warning=FALSE, fig.width=15, fig.height=10, fig.align='center'}
-
-# setup from question
-test_person <- data.frame(weight = 70, height = 160, age = 70, sex = "female")
-Ct <- 0.15
-t  <- 2
-
-# empirical quantiles for Beta60 (population approach)
-beta_pop <- quantile(data$beta, probs = c(0.025, 0.5, 0.975))
-
-# C0 values using population quantiles
-C0_pop <- Ct + beta_pop * t
-
-# gamma fitted whole population distribution
-gamma_quantiles <- qgamma(c(0.025, 0.5, 0.975), gamma_shape, gamma_rate)
-C0_gamma <- Ct + gamma_quantiles * t
-
-# gamma fitted to males
-m_gamma_quantiles <- qgamma(c(0.025, 0.5, 0.975), m_gamma_shape, m_gamma_rate)
-C0_gamma_m <- Ct + m_gamma_quantiles * t
-
-# gamma fitted to females
-f_gamma_quantiles <- qgamma(c(0.025, 0.5, 0.975), f_gamma_shape, f_gamma_rate)
-C0_gamma_f <- Ct + f_gamma_quantiles * t
-
-# predicted Beta using regression model
-lm_pred_vals <- predict(lm_model, newdata = test_person, interval = "prediction", level = 0.95)
-
-# C0 values from regression model
-beta_pred_lm <- as.numeric(lm_pred_vals)
-names(beta_pred_lm) <- c("Fitted", "Lower (PI 2.5%)", "Upper (PI 97.5%)")
-C0_lm <- Ct + beta_pred_lm * t
-
-# predicted beta using quantile regression model
-rq_pred_vals <- predict(rq_model, newdata = test_person, interval = "confidence", level = 0.95)
-C0_rq <- Ct + rq_pred_vals * t
-
-# combine results into one comparison table 
-results_table <- tibble(
-  Approach = c("Population (empirical quantiles)", "Gamma Fitted", "Male Gamma Fitted", "Female Gamma Fitted", "Linear Regression", "Quantile Regression"),
-  Lower_2.5 = c(C0_pop[1], C0_gamma[1], C0_gamma_m[1], C0_gamma_f[1], C0_lm[2], C0_rq[2]),  # note ordering: lwr=2nd col in pred
-  Central   = c(C0_pop[2], C0_gamma[2], C0_gamma_m[2], C0_gamma_f[2], C0_lm[1], C0_rq[1]),
-  Upper_97.5 = c(C0_pop[3], C0_gamma[3], C0_gamma_m[3], C0_gamma_f[3], C0_lm[3], C0_rq[3])
-)
-
-kable(results_table, digits = 3,
-      col.names = c("Approach", "Lower (2.5%)", "Central", "Upper (97.5%)"),
-      caption = "Table 4: Comparison of estimated C₀ values for the various approaches")
-```
-
-The legal limit is 0.47g/kg.
+-   our suggested alternative quantile regression approach, also with a probabilistic decision approach, and corresponding confidence interval.
 
 ```{r approach comparison, echo = FALSE, fig.width=20, fig.height=10, fig.align='center'}
 
@@ -1154,14 +1140,7 @@ C0_qr_lower <- Ct + mean(beta_q025_qr, na.rm = TRUE) * t
 C0_qr_upper <- Ct + mean(beta_q975_qr, na.rm = TRUE) * t
 C0_qr_mean  <- mean(c(C0_qr_lower, C0_qr_upper))
 
-# Approximate P(Co > limit) under QR
-set.seed(123)
-n_sim <- 1000
-# Sample indices and uniform draws between predicted bounds
-idx <- sample(seq_along(beta_q025_qr), size = n_sim, replace = TRUE)
-beta_samples_qr <- runif(n_sim, min = beta_q025_qr[idx], max = beta_q975_qr[idx])
-C0_samples_qr   <- Ct + beta_samples_qr * t
-p_qr <- mean(C0_samples_qr > x_limit, na.rm = TRUE)
+p_qr <- p_over_limit_sim
 
 # plot
 results_df <- tibble(
@@ -1196,7 +1175,7 @@ geom_text(
   data = subset(results_df, Method != "Current (Fixed β=0.126)"),
   aes(x = Upper, 
       y = Method, 
-      label = sprintf("P(C[0] > 0.47) == %.2f", Prob)),
+      label = sprintf("P(C[0] > 0.47) == %.3f", Prob)),
   parse = TRUE,
   hjust = 1,
   vjust = 1.5,
@@ -1214,6 +1193,12 @@ geom_text(
 
 p
 ```
+
+As illustrated in Figure , there is a great deal of overlap between our two recommended approaches, with both providing probabilities of above around 75% that the individual was above the legal limit at the time of driving. The narrower confidence interval provided by quantile regression indicates a decrease in uncertainty when this approach is taken.
+
+Compared to the binary approach currently implemented by Police Scotland, these recommended approaches provide a measure of the uncertainty in such a procedure, and account for this in their probabilistic nature.
+
+Thus, we recommend to Police Scotland that, when dealing with cases as illustrated in this case study, a probabilistic approach is incorporated to account for uncertainty in the back calculation approach. Especially when cases provide borderline estimates (as illustrated in this case study), it is crucial that these estimates are treated with the uncertainty that is associated with their derivation.
 
 \newpage
 
